--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Retenciones",
-  "name": "Retenciones",
+  "short_name": "Televenta",
+  "name": "Televenta",
   "icons": [
     {
       "src": "favicon.ico",
