--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-data-table-component": "^7.5.3",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4"
