--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "soluziona_generacc_callintro_televenta_entel",
-  "homepage": "/Orkesta/Generacc/Call",
+  "name": "soluziona_callsouth_sonrie_seguro",
+  "homepage": "/Soluziona/CallSouth/SonrieSeguro/Call",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
